Blogging App (spring boot backend rest apis)